[package]
name = "traffic-monitor"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemstat = "0.2.3"
tokio = { version = "1.38.0", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }

reqwest = { version = "0.12.5", features = ["json"] }

anyhow = "1.0"

sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "macros", "chrono", "json", "migrate" ] }

time = "0.3.21"
chrono = { version = "0.4.38", features = ["serde"] }

tokio-cron-scheduler = "*"
uuid = "1.8.0"
