[package]
name = "traffic-monitor"
version = "0.10.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemstat = "0.2.4"
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["fs", "auth", "catch-panic"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-inline-default = "0.2.3"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time", "local-time"] }

reqwest = { version = "0.12.19", features = ["json"] }

anyhow = "1.0.98"

sqlx = { version = "0.8.6", features = [ "runtime-tokio", "sqlite", "macros", "chrono", "json", "migrate" ] }

time = "0.3.41"
chrono = { version = "0.4.41", features = ["serde"] }

tokio-cron-scheduler = "0.14.0"
uuid = "1.17.0"

rust_decimal = "1.37.1"
rust_decimal_macros = "1.37.1"
